# advent-of-code-2022

./: .gitignore  LICENSE  README.md  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  lib.py  pyproject.toml  template.py.txt  watch
