[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Jared Welch <jared@jeli.io>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
watchfiles = "^0.18.1"
rich = "^12.6.0"
typer = "^0.7.0"
more-itertools = "^9.0.0"
pygame = "^2.1.2"
z3-solver = "^4.11.2.0"
scalene = "^1.5.16"
networkx = "^2.8.8"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
